# DesktopApp-Kindergarden-Management-

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ResNet50_Model_cracks.ipynb  cmake_install.cmake  eleve.cpp  eleve.h  eleve.ui  enseignant.cpp  enseignant.h  enseignant.ui  home.cpp  home.h  home.ui  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  signin.cpp  signin.h  signin.ui
